// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tickets reducers bulk delete 1`] = `
Immutable.Map {
  cursor: null,
  items: Immutable.List [
    Immutable.Map {
      id: 3,
      name: "Another nice ticket",
    },
  ],
}
`;

exports[`tickets reducers fetch list 1`] = `
Immutable.Map {
  cursor: null,
  items: Immutable.List [
    Immutable.Map {
      name: "A ticket",
    },
    Immutable.Map {
      name: "Another ticket",
    },
  ],
}
`;

exports[`tickets reducers fetch list 2`] = `
Immutable.Map {
  cursor: null,
  items: Immutable.List [
  ],
}
`;

exports[`tickets reducers fetch ticket 1`] = `
Immutable.Map {
  cursor: null,
  items: Immutable.List [
    Immutable.Map {
      id: 1,
      name: "A ticket",
    },
    Immutable.Map {
      id: 2,
      name: "Another ticket",
      is_unread: false,
    },
  ],
}
`;

exports[`tickets reducers fetch ticket 2`] = `
Immutable.Map {
  cursor: null,
  items: Immutable.List [
    Immutable.Map {
      id: 1,
      name: "A ticket",
    },
    Immutable.Map {
      id: 2,
      name: "Another ticket",
    },
  ],
}
`;
